@@ -7,6 +7,9 @@ setAs("matrix", "TsparseMatrix",
       else if(is.logical(from)) as(Matrix(from, sparse=TRUE), "TsparseMatrix")
       else stop("not-yet-implemented coercion to \"TsparseMatrix\""))
 
+setAs("numeric", "TsparseMatrix",
+      function(from) as(as.matrix(from), "TsparseMatrix"))
+
 setAs("TsparseMatrix", "matrix",
       function(from) .Call(dgTMatrix_to_matrix, as(from, "dgTMatrix")))
 
